--- a/Essentials/html/practice2/task6.html
+++ b/Essentials/html/practice2/task6.html
@@ -10,12 +10,33 @@
     <table border="2">
         <thead>
             <tr>
-                <td>number</td>
+                <td colspan="5">number</td>
             </tr>
         </thead>
         <tbody>
             <tr>
-             
+             <td rowspan="2">1</td>
+             <td>2</td>
+             <td>3</td>
+             <td>4</td>
+             <td>5</td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td colspan="3">7</td>
+            </tr>
+            <tr>
+                <td>8</td>
+                <td>9</td>
+                <td rowspan="2">10</td>
+                <td>11</td>
+                <td>12</td>
+            </tr>
+            <tr>
+                <td>13</td>
+                <td>14</td>
+                <td>15</td>
+                <td>16</td>
             </tr>
         </tbody>
     </table>
