--- a/Essentials/html/practice2/task7.html
+++ b/Essentials/html/practice2/task7.html
@@ -27,6 +27,13 @@
                 <td>arts</td>
             </tr>
             <tr>
+                <td>science</td>
+                <td>maths</td>
+                <td>science</td>
+                <td>maths</td>
+                <td>arts</td>
+            </tr>
+            <tr>
                 <td colspan="5"><center>lunch</center></td>
             </tr>
             <tr>
